--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "eslint --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx,json,md}\"",
     "test": "vitest",
     "coverage": "vitest run --coverage"
   },
@@ -34,6 +35,7 @@
     "eslint-config-next": "16.1.6",
     "eslint-config-prettier": "^10.1.8",
     "jsdom": "^28.1.0",
+    "lefthook": "^2.1.1",
     "prettier": "^3.8.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^4",
