--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -1,8 +1,27 @@
 services:
-  app:
+  app1-staging:
     image: ghcr.io/minkgkyaw9899/hsumchaint_next:staging
     restart: always
-    ports:
-      - "3001:3000"
+    expose:
+      - "3000"
     environment:
       - NODE_ENV=staging
+
+  app2-staging:
+    image: ghcr.io/minkgkyaw9899/hsumchaint_next:staging
+    restart: always
+    expose:
+      - "3000"
+    environment:
+      - NODE_ENV=staging
+
+  nginx-staging:
+    image: nginx:alpine
+    restart: always
+    ports:
+      - "8081:80" # staging က port 8080
+    volumes:
+      - ./nginx.staging.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - app1-staging
+      - app2-staging
