--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,7 +67,7 @@ jobs:
           <p>Project: <b>NextJS</b></p>
           <p>Actor: <b>${{ github.actor }}</b></p>
           <p>Commit Message: <b>${{ github.event.head_commit.message }}</b></p>
-          <p>URL: <b>http://${{ secrets.VULTR_HOST }}</b></p>
+          <p>URL: <b>http://${{ vars.VULTR_HOST_URL }}:8081</b></p>
         </div>
 
   notify-production-failure:
@@ -117,7 +117,7 @@ jobs:
           <p>Project: <b>NextJS</b></p>
           <p>Actor: <b>${{ github.actor }}</b></p>
           <p>Commit Message: <b>${{ github.event.head_commit.message }}</b></p>
-          <p>URL: <b>http://${{ secrets.VULTR_HOST }}:8082</b></p>
+          <p>URL: <b>http://${{ vars.VULTR_HOST_URL }}:8082</b></p>
         </div>
 
   notify-staging-failure:
