chore: change nginx configuration for faster load

--- a/nginx.staging.conf
+++ b/nginx.staging.conf
@@ -1,5 +1,6 @@
-limit_req_zone $binary_remote_addr zone=api_limit_staging:10m rate=10r/s;
-limit_req_zone $binary_remote_addr zone=general_staging:10m rate=30r/s;
+# Rate limiting configuration
+limit_req_zone $binary_remote_addr zone=api_limit_staging:10m rate=50r/s;   # Rate ကို တိုးထားပါတယ်
+limit_req_zone $binary_remote_addr zone=general_staging:10m rate=100r/s;  # Website load မြန်ဖို့ တိုးထားပါတယ်
 limit_conn_zone $binary_remote_addr zone=conn_limit_staging:10m;
 
 upstream nextjs_staging {
@@ -13,15 +14,45 @@ server {
     listen 80;
     server_name _;
 
-    limit_conn conn_limit_staging 20;
+    limit_conn conn_limit_staging 40; # Connection limit ကို အနည်းငယ် တိုးပေးထားပါတယ်
 
+    # Security headers
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Environment "staging";
 
-    limit_req zone=general_staging burst=50 nodelay;
+    # Global Rate Limit
+    limit_req zone=general_staging burst=150 nodelay;
 
+    # 1. Next.js Static Assets (CSS/JS) - ဒီအပိုင်းက ပုံစံမပျက်အောင် လုပ်ပေးမှာပါ
+    location /_next/static/ {
+        proxy_pass http://nextjs_staging;
+        proxy_http_version 1.1;
+        proxy_cache_valid 200 1y;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+        access_log off; # Static files အတွက် log ပိတ်ထားရင် ပိုသွက်ပါတယ်
+    }
+
+    # 2. Public Assets (Images, Favicons)
+    location /static/ {
+        proxy_pass http://nextjs_staging;
+        proxy_http_version 1.1;
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
+    }
+
+    # 3. API Requests
+    location /api/ {
+        limit_req zone=api_limit_staging burst=50 nodelay;
+        proxy_pass http://nextjs_staging;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    # 4. General Pages (Root)
     location / {
         proxy_pass http://nextjs_staging;
         proxy_http_version 1.1;
@@ -31,19 +62,5 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_cache_bypass $http_upgrade;
-    }
-
-    location /api/ {
-        limit_req zone=api_limit_staging burst=20 nodelay;
-        proxy_pass http://nextjs_staging;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
-
-    location /_next/static/ {
-        proxy_pass http://nextjs_staging;
-        proxy_cache_valid 200 1y;
-        add_header Cache-Control "public, max-age=31536000, immutable";
     }
 }
