--- a/.github/workflows/reusable-telegram.yml
+++ b/.github/workflows/reusable-telegram.yml
@@ -6,7 +6,7 @@ on:
       message:
         required: true
         type: string
-      parse_mode:
+      format:
         required: false
         type: string
         default: 'HTML'
@@ -28,4 +28,4 @@ jobs:
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           message_thread_id: ${{ secrets.TELEGRAM_GITHUB_TOPIC_ID }}
           message: ${{ inputs.message }}
-          parse_mode: ${{ inputs.parse_mode }}
+          format: ${{ inputs.format }}
