--- a/.github/workflows/pr-notify.yml
+++ b/.github/workflows/pr-notify.yml
@@ -11,36 +11,37 @@ jobs:
     uses: ./.github/workflows/reusable-telegram.yml
     secrets: inherit
     with:
+      format: HTML
       message: |
-        🔔 *New PR Opened*
-        📦 `${{ github.repository }}`
-        👤 ${{ github.actor }}
-        📌 ${{ github.event.pull_request.title }}
-        🌿 `${{ github.head_ref }}` → `${{ github.base_ref }}`
-        🔗 ${{ github.event.pull_request.html_url }}
+        <b>🔔 New PR Opened</b>
 
+        <b>Project:</b> NextJS
+        <b>Actor:</b> ${{ github.actor }}
+        <b>Title:</b> ${{ github.event.pull_request.title }}
+        <b>Branch:</b> `${{ github.head_ref }}` → `${{ github.base_ref }}`
   pr-updated:
     if: github.event.action == 'synchronize'
     uses: ./.github/workflows/reusable-telegram.yml
     secrets: inherit
     with:
+      format: HTML
       message: |
-        🔄 *PR Updated*
-        📦 `${{ github.repository }}`
-        👤 ${{ github.actor }}
-        📌 ${{ github.event.pull_request.title }}
-        🌿 `${{ github.head_ref }}` → `${{ github.base_ref }}`
-        🔗 ${{ github.event.pull_request.html_url }}
+        <b>🔄 *PR Updated*</b>
+        <b>Project:</b> `${{ github.repository }}`
+        <b>Actor:</b> ${{ github.actor }}
+        <b>Title:</b> ${{ github.event.pull_request.title }}
+        <b>Branch:</b> `${{ github.head_ref }}` → `${{ github.base_ref }}`
 
   pr-merged:
     if: github.event.action == 'closed' && github.event.pull_request.merged == true
     uses: ./.github/workflows/reusable-telegram.yml
     secrets: inherit
     with:
+      format: HTML
       message: |
-        ✅ *PR Merged*
-        📦 `${{ github.repository }}`
-        👤 ${{ github.actor }}
-        📌 ${{ github.event.pull_request.title }}
-        🌿 `${{ github.head_ref }}` → `${{ github.base_ref }}`
-        🔗 ${{ github.event.pull_request.html_url }}
+        <b>🔔 *PR Merged*</b>
+
+        <b>Project:</b> NextJS
+        <b>Actor:</b> ${{ github.actor }}
+        <b>Title:</b> ${{ github.event.pull_request.title }}
+        <b>Branch:</b> `${{ github.head_ref }}` → `${{ github.base_ref }}`
