--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,9 +29,9 @@ jobs:
     secrets: inherit
     with:
       message: |
-        ❌ *Pipeline Failed — Tests*
-        📦 `${{ github.repository }}`
-        👤 ${{ github.actor }}
-        📌 ${{ github.event.pull_request.title }}
-        🌿 `${{ github.head_ref }}` → `${{ github.base_ref }}`
-        🔗 ${{ github.event.pull_request.html_url }}
+        <b>🔔 *Tests Failed*</b>
+
+        <b>Project:</b> NextJS
+        <b>Actor:</b> ${{ github.actor }}
+        <b>Title:</b> ${{ github.event.pull_request.title }}
+        <b>Branch:</b> `${{ github.head_ref }}` → `${{ github.base_ref }}`
