--- a/nginx.staging.conf
+++ b/nginx.staging.conf
@@ -1,8 +1,12 @@
 # Rate limiting configuration
-limit_req_zone $binary_remote_addr zone=api_limit_staging:10m rate=50r/s;   # Rate ကို တိုးထားပါတယ်
-limit_req_zone $binary_remote_addr zone=general_staging:10m rate=100r/s;  # Website load မြန်ဖို့ တိုးထားပါတယ်
+limit_req_zone $binary_remote_addr zone=api_limit_staging:10m rate=50r/s;  
+limit_req_zone $binary_remote_addr zone=general_staging:10m rate=100r/s; 
 limit_conn_zone $binary_remote_addr zone=conn_limit_staging:10m;
 
+# Proxy cache for static assets (used by /_next/static/)
+# path should exist in the container or host; adjust if needed.
+proxy_cache_path /var/cache/nginx/static_cache levels=1:2 keys_zone=static_cache:10m \
+    inactive=7d max_size=500m use_temp_path=off;
 upstream nextjs_staging {
     least_conn;
     server app1-staging:3000;
@@ -14,7 +18,7 @@ server {
     listen 80;
     server_name _;
 
-    limit_conn conn_limit_staging 40; # Connection limit ကို အနည်းငယ် တိုးပေးထားပါတယ်
+    limit_conn conn_limit_staging 40;
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN";
@@ -25,13 +29,21 @@ server {
     # Global Rate Limit
     limit_req zone=general_staging burst=150 nodelay;
 
-    # 1. Next.js Static Assets (CSS/JS) - ဒီအပိုင်းက ပုံစံမပျက်အောင် လုပ်ပေးမှာပါ
+    # 1. Next.js Static Assets (CSS/JS) - 
     location /_next/static/ {
         proxy_pass http://nextjs_staging;
         proxy_http_version 1.1;
+        proxy_cache static_cache;
         proxy_cache_valid 200 1y;
-        add_header Cache-Control "public, max-age=31536000, immutable";
-        access_log off; # Static files အတွက် log ပိတ်ထားရင် ပိုသွက်ပါတယ်
+        add_header Cache-Control "public, max-age=31536000, immutable" always;
+        # Re-declare security headers here with `always` so they're present
+        # on proxied static responses (nginx's add_header inheritance
+        # can be overridden by child blocks).
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header X-Environment "staging" always;
+        access_log off;
     }
 
     # 2. Public Assets (Images, Favicons)
@@ -40,6 +52,10 @@ server {
         proxy_http_version 1.1;
         expires 30d;
         add_header Cache-Control "public, no-transform";
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header X-Environment "staging" always;
     }
 
     # 3. API Requests
