--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,18 +1,21 @@
-name: TEST
+name: PR Tests
 
 on:
-  pull_request_target:
-    branches: [develop]
+  workflow_run:
+    workflows: ["PR Title Check"]
+    types: [completed]
 
 jobs:
   tests:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
     steps:
-      - uses: actions/checkout@v4
+      - name: Check out code at PR commit
+        uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.pull_request.head.sha }}
+          ref: ${{ github.event.workflow_run.head_sha }}
 
       - uses: oven-sh/setup-bun@v1
 
@@ -29,9 +32,9 @@ jobs:
     secrets: inherit
     with:
       message: |
-        <b>🔔 *Tests Failed*</b>
+        <b>🔔 Tests Failed</b>
 
         <b>Project:</b> NextJS
         <b>Actor:</b> ${{ github.actor }}
-        <b>Title:</b> ${{ github.event.pull_request.title }}
-        <b>Branch:</b> `${{ github.head_ref }}` → `${{ github.base_ref }}`
+        <b>Title:</b> ${{ github.event.workflow_run.pull_requests[0].title }}
+        <b>Branch:</b> `${{ github.event.workflow_run.pull_requests[0].head.ref }}` → `${{ github.event.workflow_run.pull_requests[0].base.ref }}`
