--- a/nginx.conf
+++ b/nginx.conf
@@ -18,8 +18,10 @@ server {
     location /_next/static/ {
         proxy_pass http://nextjs;
         proxy_http_version 1.1;
-        proxy_cache_valid 200 1y;
         add_header Cache-Control "public, max-age=31536000, immutable";
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header X-Content-Type-Options "nosniff";
+        add_header X-XSS-Protection "1; mode=block";
     }
 
     # Public Folder Assets (Images/Favicons)
@@ -28,6 +30,9 @@ server {
         proxy_http_version 1.1;
         expires 30d;
         add_header Cache-Control "public, no-transform";
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header X-Content-Type-Options "nosniff";
+        add_header X-XSS-Protection "1; mode=block";
     }
 
     # Root location
