feat: add new packages and testing

--- a/lefthook.yaml
+++ b/lefthook.yaml
@@ -37,4 +37,12 @@ pre-push:
           exit 1
         fi
     tests:
-      run: bun run test:ci
+      run: |
+        branch=$(git rev-parse --abbrev-ref HEAD)
+        if [[ "$branch" == "main" || "$branch" == "staging" ]]; then
+          echo "🚀 Running ALL tests (Unit + E2E) for $branch branch..."
+          bun run test:all
+        else
+          echo "🛡️ Running Unit tests for $branch branch..."
+          bun run test:unit
+        fi
