--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "next start",
     "lint": "eslint --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,json,md}\"",
-    "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "test": "bun vitest run",
+    "test:watch": "bun vitest",
+    "test:coverage": "bun vitest run --coverage",
+    "test:unit": "bun vitest run",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:show": "playwright show-report",
+    "test:all": "npm run test:unit && npm run test:e2e",
+    "test:ci": "npm run test:unit"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -27,6 +34,9 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.4.2",
+    "@commitlint/config-conventional": "^20.4.2",
+    "@playwright/test": "^1.58.2",
     "@tailwindcss/postcss": "^4",
     "@tanstack/eslint-plugin-query": "^5.91.4",
     "@testing-library/dom": "^10.4.1",
