chore: update pr title check failed desc

--- a/.github/workflows/pr-title-check.yml
+++ b/.github/workflows/pr-title-check.yml
@@ -43,3 +43,4 @@ jobs:
         <b>Project:</b> NextJS
         <b>Actor:</b> ${{ github.actor }}
         <b>Title:</b> ${{ github.event.pull_request.title }}
+        <b>Please follow the Conventional Commits format.</b>
