--- a/lefthook.yaml
+++ b/lefthook.yaml
@@ -39,7 +39,7 @@ pre-push:
     tests:
       run: |
         branch=$(git rev-parse --abbrev-ref HEAD)
-        if [[ "$branch" == "main" || "$branch" == "staging" ]]; then
+        if [ "$branch" = "main" ] || [ "$branch" = "staging" ]; then
           echo "🚀 Running ALL tests (Unit + E2E) for $branch branch..."
           bun run test:all
         else
