--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,16 +1,25 @@
 FROM oven/bun:1
 
+# Create a non-root user and group
+RUN groupadd -g 1001 nodejs && useradd -u 1001 -g nodejs -s /bin/sh -m nextjs
+
 WORKDIR /app
 
-# Install dependencies based on the preferred package manager
-COPY package.json bun.lock ./
+# Ensure the app directory is owned by the non-root user
+RUN chown nextjs:nodejs /app
+
+# Switch to the non-root user
+USER nextjs
+
+# Install dependencies
+COPY --chown=nextjs:nodejs package.json bun.lock ./
 RUN bun install
 
-# Copy the rest of the application code
-COPY . .
+# Copy the rest of the application code with proper ownership
+COPY --chown=nextjs:nodejs . .
 
 # Expose the port Next.js runs on
 EXPOSE 3000
 
-# Run the next dev command which handles hot reloading
+# Run the next dev command
 CMD ["bun", "run", "dev"]
